--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
 	<meta charset="UTF-8">
 	<title>Inspire</title>
 	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
 </head>
 
 <body id="body">
 	<div id="weather">
-
+		
 	</div>
 
 	<div id="quote">
-
+		
 	</div>
 
 	<div id="todo">
-
+		<form>
+			<input type="text" name="listItem" />
+			<button type="submit">add to list</button>
+		</form>
+		<ul id="list"></ul>
 	</div>
 
 
