--- a/index.html
+++ b/index.html
@@ -3,42 +3,65 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Inspire</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
 </head>
 
-<body id="body">
-	<div id="weather">
-		
-	</div>
 
-	<div id="quote">
-		
-	</div>
+<script>
+function startTime() {
+    var today = new Date();
+    var h = today.getHours();
+    var m = today.getMinutes();
+    var s = today.getSeconds();
+    m = checkTime(m);
+    s = checkTime(s);
+    document.getElementById('txt').innerHTML =
+    h + ":" + m + ":" + s;
+    var t = setTimeout(startTime, 500);
+}
+function checkTime(i) {
+    if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
+    return i;
+}
+</script>
 
-	<div id="todo">
-		<form>
-			<input type="text" name="listItem" />
-			<button type="submit">add to list</button>
-		</form>
-		<ul id="list"></ul>
-	</div>
 
-	
+<body id="body" onload="startTime()">
+	<div class="container-fluid">
+		<div class="flexbox">
+
+			<div id="todo" class="todo">
+				<form>
+					<input type="text" name="listItem" />
+					<button type="submit">add to list</button>
+				</form>
+				<ul id="list"></ul>
+			</div>
+
+			<div id="weather" class="weather">
+			</div>
+			
+		</div>
+
+		<div class="flexbox2">
+			<div id="txt" class="clock"></div>
+			<div id="quote" class="quote"> </div>
+		</div>
 
 
-	<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-	<script src="app/init.js"></script>
-	<script src="app/components/weather/weather-service.js"></script>
-	<script src="app/components/image/image-service.js"></script>
-	<script src="app/components/quote/quote-service.js"></script>
-	<script src="app/components/todo/todo-service.js"></script>
 
-	<!--Load your scripts below-->
-	<script src="app/components/weather/weather-controller.js"></script>
-	<script src="app/components/image/image-controller.js"></script>
-	<script src="app/components/quote/quote-controller.js"></script>
-	<script src="app/components/todo/todo-controller.js"></script>
+		<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+		<script src="app/init.js"></script>
+		<script src="app/components/weather/weather-service.js"></script>
+		<script src="app/components/image/image-service.js"></script>
+		<script src="app/components/quote/quote-service.js"></script>
+		<script src="app/components/todo/todo-service.js"></script>
+		<!--Load your scripts below-->
+		<script src="app/components/weather/weather-controller.js"></script>
+		<script src="app/components/image/image-controller.js"></script>
+		<script src="app/components/quote/quote-controller.js"></script>
+		<script src="app/components/todo/todo-controller.js"></script>
 
 </body>
 
