--- a/index.html
+++ b/index.html
@@ -7,26 +7,6 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-
-<script>
-function startTime() {
-    var today = new Date();
-    var h = today.getHours();
-    var m = today.getMinutes();
-    var s = today.getSeconds();
-    m = checkTime(m);
-    s = checkTime(s);
-    document.getElementById('txt').innerHTML =
-    h + ":" + m + ":" + s;
-    var t = setTimeout(startTime, 500);
-}
-function checkTime(i) {
-    if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
-    return i;
-}
-</script>
-
-
 <body id="body" onload="startTime()">
 	<div class="container-fluid">
 		<div class="flexbox">
@@ -45,7 +25,7 @@ function checkTime(i) {
 		</div>
 
 		<div class="flexbox2">
-			<div id="txt" class="clock"></div>
+			<div id="clock" class="clock"></div>
 			<div id="quote" class="quote"> </div>
 		</div>
 
@@ -62,6 +42,7 @@ function checkTime(i) {
 		<script src="app/components/image/image-controller.js"></script>
 		<script src="app/components/quote/quote-controller.js"></script>
 		<script src="app/components/todo/todo-controller.js"></script>
+		<script src="app/components/clock.js"></script>
 
 </body>
 
